# kodi-rs

./: .gitignore  Cargo.toml
src/: addons.rs  application.rs  audiolibrary.rs  favourites.rs  files.rs  gui.rs  input.rs  jsonrpc.rs  lib.rs  player.rs  playlist.rs  profiles.rs  pvr.rs  settings.rs  system.rs  textures.rs  videolibrary.rs  xbmc.rs
